--- a/index.ipynb
+++ b/index.ipynb
@@ -175,6 +175,27 @@
     }
    },
    "source": [
+    "\n",
+    "**Steps** \n",
+    "\n",
+    "Extract Data from Meetup (hint: Meetup API)\n",
+    "\n",
+    "![](https://cdn-images-1.medium.com/max/800/1*WxBM1lB5WzDjrDXYfi9gtw.gif)\n",
+    "\n",
+    "\n",
+    "![](https://cdn-images-1.medium.com/max/1600/1*PIrETF3nqHBQ7K9g9y_p7w.png)\n",
+    "\n",
+    "Credits: Andrew NG's CNN Course and this Medium post on [Machine Learning is Fun](https://medium.com/@ageitgey/machine-learning-is-fun-part-5-language-translation-with-deep-learning-and-the-magic-of-sequences-2ace0acca0aa)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "![](./images/Output_sample.PNG)"
    ]
   }
